# mlops_sample_project

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cloudbuild.yaml  data.dvc  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_tests.txt  tasks.py
.dvc/: config
.github/workflows/: tests.yaml
.hydra/: config.yaml  hydra.yaml
configs/: default_config.yaml
configs/model_experiments/: model1.yaml
data/processed/: test_images.pt  test_target.pt  train_images.pt  train_target.pt
dockerfiles/: api.dockerfile  evaluate.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: model.pth  model_experiment1.pth
outputs/2025-01-08/13-37-25/.hydra/: hydra.yaml
outputs/2025-01-08/13-39-51/.hydra/: hydra.yaml
outputs/2025-01-08/13-40-22/.hydra/: hydra.yaml
outputs/2025-01-08/14-04-15/.hydra/: hydra.yaml
outputs/2025-01-08/14-04-52/.hydra/: config.yaml  hydra.yaml
outputs/2025-01-08/14-11-50/.hydra/: hydra.yaml
outputs/2025-01-08/14-15-29/.hydra/: config.yaml  hydra.yaml
outputs/2025-01-08/14-15-49/.hydra/: hydra.yaml
outputs/2025-01-08/14-18-54/.hydra/: hydra.yaml
outputs/2025-01-08/14-25-44/.hydra/: hydra.yaml
outputs/2025-01-08/14-26-22/.hydra/: hydra.yaml
outputs/2025-01-08/14-27-46/.hydra/: hydra.yaml
outputs/2025-01-08/14-31-59/.hydra/: hydra.yaml
src/mlops_sample_project/: data.py  evaluate.py  model.py  train.py  visualize.py
src/mlops_sample_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_data.py  test_training.py
(+14 files in other folders)
