[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops_sample_project"
version = "0.0.1"
description = "This is sample project for machine learning operations. Tempalte is created by Nicki Skafte Detlefsen"
authors = [{ name = "Gustav Clausen", email = "your@email.com" }]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ['requirements_dev.txt'] }

[tool.ruff]
line-length = 120
select = ["I"]

[tool.coverage.run]
omit = ["tests/*"]

[project.scripts]
train = "mlops_sample_project.train:train"
evaluate = "mlops_sample_project.evaluate:evaluate"
